examples/bad/10-BadReferencePass.tms
void x(int x, int @ y) {
  return;
}

void main() {

  x(1, 2);
  
  return;
}